syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/matheuspolitano/GadgetHub/pkg/pb";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string acess_token = 1;
    google.protobuf.Timestamp access_token_expires_at = 2; 
}